--- a/MagicHateBall/MagicHateBall.csproj
+++ b/MagicHateBall/MagicHateBall.csproj
@@ -43,8 +43,14 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Happy.cs" />
+    <Compile Include="Hater.cs" />
+    <Compile Include="IQuestion.cs" />
+    <Compile Include="Magic.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Robot.cs" />
+    <Compile Include="Sad.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
